src/test/resources/org/rust/ide/annotator/fixtures/items/annotations.rs
<error descr="Cannot declare a new module at this location">mod foo;</error>

mod inner {
    <error descr="Unresolved module">mod bar;</error>
}

fn main() {}
